<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="LineAwesome.ttf">
            <string>LineAwesome</string>
        </array>
        <array key="SourceSansPro-Regular.ttf">
            <string>SourceSansPro-Regular</string>
        </array>
        <array key="SourceSansPro-Semibold.ttf">
            <string>SourceSansPro-Semibold</string>
        </array>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddressBar" customModule="Eray_Cetiner_Privacy_Browser" customModuleProvider="target">
            <connections>
                <outlet property="addressTextField" destination="ugU-pG-kAg" id="b1L-ef-0K2"/>
                <outlet property="reloadButton" destination="Ni8-iM-Ye4" id="hwO-tQ-CS7"/>
                <outlet property="trackerCountButton" destination="hg6-NX-fCP" id="fqo-8p-DjD"/>
                <outlet property="view" destination="iN0-l3-epB" id="Gd0-rL-6m8"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="408" height="53"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="h1C-fi-b5f">
                    <rect key="frame" x="16" y="10.5" width="376" height="32"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hg6-NX-fCP" userLabel="Tracker Count Badge Button" customClass="TrackerCountButton" customModule="Eray_Cetiner_Privacy_Browser" customModuleProvider="target">
                            <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <accessibility key="accessibilityConfiguration" identifier="addressBarTrackerCountButton"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="32" id="YGh-Et-q1a"/>
                                <constraint firstAttribute="width" constant="32" id="t7U-3e-RyY"/>
                            </constraints>
                            <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="17"/>
                            <state key="normal" title="?">
                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <connections>
                                <action selector="trackerButtonTapped" destination="-1" eventType="touchUpInside" id="3Ph-ys-SYG"/>
                            </connections>
                        </button>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type address or search" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ugU-pG-kAg" userLabel="Address Text Field">
                            <rect key="frame" x="40" y="0.0" width="296" height="32"/>
                            <accessibility key="accessibilityConfiguration" identifier="addressBarAddressTextField"/>
                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="16"/>
                            <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="go"/>
                            <connections>
                                <action selector="addressTextFieldActionTriggered" destination="-1" eventType="primaryActionTriggered" id="EfB-Ph-iGP"/>
                                <action selector="addressTextFieldEditingChanged" destination="-1" eventType="editingChanged" id="XP2-bv-UQc"/>
                                <action selector="addressTextFieldEditingDidBegin" destination="-1" eventType="editingDidBegin" id="pm8-Qp-nby"/>
                            </connections>
                        </textField>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ni8-iM-Ye4" userLabel="Reload Button">
                            <rect key="frame" x="344" y="0.0" width="32" height="32"/>
                            <accessibility key="accessibilityConfiguration" identifier="addressBarReloadButton"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="32" id="QAT-ZT-nWf"/>
                                <constraint firstAttribute="width" constant="32" id="kc8-Ic-aEM"/>
                            </constraints>
                            <fontDescription key="fontDescription" name="LineAwesome" family="LineAwesome" pointSize="24"/>
                            <state key="normal" title=""/>
                            <connections>
                                <action selector="reloadButtonTapped" destination="-1" eventType="touchUpInside" id="2bt-H2-mH8"/>
                            </connections>
                        </button>
                    </subviews>
                    <constraints>
                        <constraint firstAttribute="height" constant="32" id="Jdj-5h-VWC"/>
                    </constraints>
                </stackView>
            </subviews>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <constraints>
                <constraint firstAttribute="trailing" secondItem="h1C-fi-b5f" secondAttribute="trailing" constant="16" id="LsN-CB-nov"/>
                <constraint firstItem="h1C-fi-b5f" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="mpZ-U9-3ek"/>
                <constraint firstItem="h1C-fi-b5f" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="xgw-u4-pwb"/>
            </constraints>
            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
            <point key="canvasLocation" x="75.200000000000003" y="-358.4707646176912"/>
        </view>
    </objects>
</document>
