...
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="VzS-kj-mOr">
                    <rect key="frame" x="16" y="0.0" width="76" height="59"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qTS-Py-6a9" userLabel="Back Button">
                            <rect key="frame" x="0.0" y="0.0" width="30" height="59"/>
                            <accessibility key="accessibilityConfiguration" identifier="navigationBarBackButton"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="30" id="hUN-g5-mVv"/>
                            </constraints>
                            <fontDescription key="fontDescription" name="LineAwesome" family="LineAwesome" pointSize="24"/>
                            <state key="normal" title=""/>
                            <state key="disabled">
...
                            <connections>
                                <action selector="backButtonTapped" destination="-1" eventType="touchUpInside" id="oHz-HX-yYw"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kNg-GP-t4C" userLabel="Forward Button">
                            <rect key="frame" x="46" y="0.0" width="30" height="59"/>
                            <accessibility key="accessibilityConfiguration" identifier="navigationBarForwardButton"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="30" id="eJ6-M2-brp"/>
                            </constraints>
                            <fontDescription key="fontDescription" name="LineAwesome" family="LineAwesome" pointSize="24"/>
                            <state key="normal" title=""/>
                            <state key="disabled">
...
